fix wrap

--- a/app.css
+++ b/app.css
@@ -140,6 +140,7 @@ nav {
     align-self: center;
     margin-left: auto;
     margin-right: auto;
+    flex-wrap: wrap;
 }
 
 .walking-icon {
